chore: manage constants