@@ -1,5 +1,6 @@
 package com.hobom.furchance.openapi;
 
+import com.hobom.furchance.constant.ApiConstant;
 import com.hobom.furchance.url.Url;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.web.bind.annotation.GetMapping;
@@ -12,40 +13,32 @@ import java.io.InputStreamReader;
 import java.net.HttpURLConnection;
 import java.net.URL;
 import java.net.URLEncoder;
-import java.time.LocalDate;
-import java.time.ZoneId;
-import java.time.format.DateTimeFormatter;
+import java.nio.charset.StandardCharsets;
 
 @RestController
 @RequestMapping(Url.ApiUrl.BASE_URL)
 public class ApiController {
 
-    @Value("${openapi.authKey}") String OPENAPI_AUTHKEY;
+    @Value("${openapi.authKey}")
+    String OPENAPI_AUTHKEY;
 
     @GetMapping
     public String getAbandonedAnimalsInString() throws IOException {
 
-        LocalDate now = LocalDate.now(ZoneId.of("Asia/Seoul"));
-        DateTimeFormatter formatter = DateTimeFormatter.ofPattern("yyyyMMdd");
-        String today = now.format(formatter);
-        
-        StringBuilder urlBuilder = new StringBuilder("http://apis.data.go.kr/1543061/abandonmentPublicSrvc/abandonmentPublic");
-        urlBuilder.append("?" + URLEncoder.encode("serviceKey","UTF-8") + "=" + OPENAPI_AUTHKEY);
-        urlBuilder.append("&" + URLEncoder.encode("bgnde","UTF-8") + "=" + URLEncoder.encode("20240620", "UTF-8"));
-        urlBuilder.append("&" + URLEncoder.encode("endde","UTF-8") + "=" + URLEncoder.encode(today, "UTF-8"));
-        urlBuilder.append("&" + URLEncoder.encode("upr_cd","UTF-8") + "=" + URLEncoder.encode("6110000", "UTF-8"));
-        urlBuilder.append("&" + URLEncoder.encode("_type","UTF-8") + "=" + URLEncoder.encode("json", "UTF-8"));
-        URL url = new URL(urlBuilder.toString());
+        String urlBuilder = Url.OpenApiUrl.BASE_URL + Url.OpenApiUrl.ABANDONED_ANIMAL_PARAM+
+                "?" + URLEncoder.encode("serviceKey", StandardCharsets.UTF_8) + "=" + OPENAPI_AUTHKEY +
+                "&" + URLEncoder.encode("bgnde", StandardCharsets.UTF_8) + "=" + URLEncoder.encode(ApiConstant.SEARCH_BEGIN_DATE, StandardCharsets.UTF_8) +
+                "&" + URLEncoder.encode("endde", StandardCharsets.UTF_8) + "=" + URLEncoder.encode(ApiConstant.SEARCH_END_DATE, StandardCharsets.UTF_8) +
+                "&" + URLEncoder.encode("upr_cd", StandardCharsets.UTF_8) + "=" + URLEncoder.encode(ApiConstant.SEOUL_CODE, StandardCharsets.UTF_8) +
+                "&" + URLEncoder.encode("_type", StandardCharsets.UTF_8) + "=" + URLEncoder.encode(ApiConstant.TYPE_JSON, StandardCharsets.UTF_8);
+        URL url = new URL(urlBuilder);
 
         HttpURLConnection conn = (HttpURLConnection) url.openConnection();
         conn.setRequestMethod("GET");
         conn.setRequestProperty("Content-type", "application/json");
 
-        System.out.println("Response code: " + conn.getResponseCode());
-
         BufferedReader rd;
-
-        if(conn.getResponseCode() >= 200 && conn.getResponseCode() <= 300) {
+        if (conn.getResponseCode() >= 200 && conn.getResponseCode() <= 300) {
             rd = new BufferedReader(new InputStreamReader(conn.getInputStream()));
         } else {
             rd = new BufferedReader(new InputStreamReader(conn.getErrorStream()));
